[gd_scene load_steps=12 format=3 uid="uid://dkuk60j5le4ty"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_nn2io"]
[ext_resource type="Texture2D" uid="uid://clw4l4bvo2nhr" path="res://graphics/tilesets/outside_walls.png" id="2_5ftol"]
[ext_resource type="Texture2D" uid="uid://c7shvj3xlt2y8" path="res://graphics/tilesets/soil.png" id="3_mb8hw"]
[ext_resource type="PackedScene" uid="uid://vwxs2inbjsn1" path="res://scenes/player/player.tscn" id="4_mopxa"]
[ext_resource type="PackedScene" uid="uid://bc7us1akhed1n" path="res://scenes/enemies/drone.tscn" id="5_4yto5"]
[ext_resource type="PackedScene" uid="uid://dn2hx2tclsw5g" path="res://scenes/objects/lights/simple_light.tscn" id="6_ggmqr"]
[ext_resource type="PackedScene" uid="uid://d05d8aa1c3caa" path="res://scenes/player/ui.tscn" id="6_yak4c"]
[ext_resource type="PackedScene" uid="uid://csrowyu1lgibw" path="res://scenes/Items/item.tscn" id="8_h3usi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kugd6"]
resource_name = "Walls"
texture = ExtResource("2_5ftol")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-67, 60, 195, 62, 195, -54, -63, -60)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, -64, -195, -62, -195, 54, 195, 54)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(67, 60, -195, 62, -195, -54, 63, -60)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(60, -67, 62, 195, -54, 195, -60, -63)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-68, -67, 195, -68, 195, 56, 62, 55, 60, 195, -60, 195)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(67, -68, 68, 195, -56, 195, -55, 62, -195, 60, -195, -60)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, 195, 62, -195, -54, -195, -54, 195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-68, -67, 195, -68, 195, 56, 62, 55, 60, 195, -60, 195)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(68, 67, -195, 68, -195, -56, -62, -55, -60, -195, 60, -195)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(60, 67, 62, -195, -54, -195, -60, 63)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kqqsr"]
resource_name = "Soil"
texture = ExtResource("3_mb8hw")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_v47uw"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 15
sources/0 = SubResource("TileSetAtlasSource_kugd6")
sources/1 = SubResource("TileSetAtlasSource_kqqsr")

[node name="Level" type="Node2D" groups=["projectiles"]]
script = ExtResource("1_nn2io")

[node name="ground" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="ground"]
position = Vector2(1, 0)
tile_set = SubResource("TileSet_v47uw")
format = 2
layer_0/name = "Ground"
layer_0/z_index = -8
layer_0/tile_data = PackedInt32Array(131065, 65537, 1, 131066, 65537, 1, 131067, 65537, 1, 131068, 65537, 1, 131069, 65537, 1, 131070, 65537, 1, 65529, 65537, 1, 65530, 65537, 1, 65531, 65537, 1, 65532, 65537, 1, 65533, 65537, 1, 65534, 65537, 1, -7, 65537, 1, -6, 65537, 1, -5, 65537, 1, -4, 65537, 1, -3, 65537, 1, -2, 65537, 1, -65543, 65537, 0, -65542, 65537, 0, -65541, 65537, 0, -65540, 65537, 0, -65539, 65537, 0, -65538, 65537, 0, 196601, 65537, 2, 196602, 65537, 2, 196603, 65537, 2, 196604, 65537, 2, 196605, 65537, 2, 196606, 65537, 2, 196600, 65537, 2, 131064, 65537, 1, 65528, 65537, 1, -8, 65537, 1, -65544, 65537, 0, -65546, 1, 0, -65545, 65537, 0, 196598, 1, 2, 196607, 131073, 2, -65537, 131073, 0, -1, 131073, 1, 65535, 131073, 1, 131071, 131073, 1, 131062, 1, 1, 65526, 1, 1, -10, 1, 1, 196599, 65537, 2, 131063, 65537, 1, 65527, 65537, 1, -9, 65537, 1)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -7
layer_1/tile_data = PackedInt32Array(131066, 65536, 0, 131067, 131072, 2, -9, 131072, 1, 131063, 65536, 2, 65527, 0, 2, -8, 0, 1, 131064, 65536, 0, 131065, 0, 2, -7, 65536, 0, -6, 0, 2, -5, 65536, 0, -4, 65536, 0, -3, 65536, 0, 65528, 0, 2, -65544, 65536, 0, -65543, 65536, 0, -65542, 65536, 0, -65541, 65536, 0, -65540, 65536, 0, -65539, 65536, 0, -65538, 65536, 0, -65545, 65536, 0, -65546, 65536, 1, -65537, 131072, 1, -10, 0, 2, 65526, 0, 2, 131062, 0, 2, -1, 0, 2, 65535, 0, 2, 131071, 0, 2, 196607, 131072, 2, 196598, 65536, 2, 196599, 65536, 0, 196600, 65536, 0, 196601, 65536, 0, 196602, 65536, 0, 196603, 65536, 0, 196604, 65536, 0, 196605, 65536, 0, 196606, 65536, 0, 65529, 0, 2, 65530, 0, 2, 65531, 65536, 1, -2, 131072, 2, 65532, 131072, 1, 131068, 0, 2)

[node name="projectiles" type="Node2D" parent="." groups=["Projectiles"]]

[node name="triggers" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ammo_boundary_north" type="Marker2D" parent="triggers"]
position = Vector2(22, -4657)
scale = Vector2(-9.32733, 194.068)

[node name="ammo_boundary_south" type="Marker2D" parent="triggers"]
position = Vector2(58, 5264)

[node name="ammo_boundary_east" type="Marker2D" parent="triggers"]
position = Vector2(10746, 28)

[node name="ammo_boundary_west" type="Marker2D" parent="triggers"]
position = Vector2(-9305, 1)

[node name="drone_spawner" type="Marker2D" parent="triggers"]
position = Vector2(-1224, 355)
metadata/_edit_lock_ = true

[node name="agents" type="Node2D" parent="."]

[node name="Player" parent="agents" instance=ExtResource("4_mopxa")]
position = Vector2(-3586, -442)

[node name="drone" parent="agents" groups=["enemies"] instance=ExtResource("5_4yto5")]
position = Vector2(-596, 344)

[node name="drone2" parent="agents" groups=["enemies"] instance=ExtResource("5_4yto5")]
position = Vector2(-2731, 179)
rotation = -1.54085

[node name="drone3" parent="agents" instance=ExtResource("5_4yto5")]
position = Vector2(-1476, -392)
rotation = -3.14036

[node name="objects" type="Node2D" parent="."]

[node name="SimpleLight" parent="objects" instance=ExtResource("6_ggmqr")]
position = Vector2(-3691, 957)
rotation = 1.12755

[node name="Item" parent="objects" instance=ExtResource("8_h3usi")]
position = Vector2(-3500, 755)

[node name="Item2" parent="objects" instance=ExtResource("8_h3usi")]
position = Vector2(-2330, 202)

[node name="Item3" parent="objects" instance=ExtResource("8_h3usi")]
position = Vector2(-797, -387)

[node name="Item4" parent="objects" instance=ExtResource("8_h3usi")]
position = Vector2(-378, 343)

[node name="SimpleLight2" parent="objects" instance=ExtResource("6_ggmqr")]
position = Vector2(-310.992, -600.99)
rotation = -2.90055

[node name="SimpleLight3" parent="objects" instance=ExtResource("6_ggmqr")]
position = Vector2(-1241.01, 1042.01)
rotation = -0.01757

[node name="UI" parent="." instance=ExtResource("6_yak4c")]

[connection signal="grenade" from="agents/Player" to="." method="_on_player_grenade"]
[connection signal="laser" from="agents/Player" to="." method="_on_player_laser"]
[connection signal="died" from="agents/drone" to="." method="_spawn_item_on_enemy_death"]
[connection signal="died" from="agents/drone2" to="." method="_spawn_item_on_enemy_death"]
